# QM

./: .gitignore  CLAUDE.md  README.md
QM/: APIClient.swift  AddEditBundleItemView.swift  AddEditBundleView.swift  AddEditItemView.swift  AddEditKitView.swift  AddEditShoppingItemView.swift  AppSchema.swift  AssistantView.swift  BackupManager.swift  BundleDetailView.swift  ChangesetDiffView.swift  ChangesetModels.swift  ContentView.swift  Conversation.swift  FirstAidChunk.swift  IconPickerView.swift  InventoryView.swift  Item.swift  ItemCategory.swift  Kit.swift  KitBundle.swift  KitDetailView.swift  KitIconColor.swift  KitItem.swift  KitListView.swift  PromptLibrary.swift  QMApp.swift  ReferenceView.swift  SettingsView.swift  ShoppingItem.swift  ShoppingListView.swift  VectorStore.swift
QM.xcodeproj/: project.pbxproj
QM.xcodeproj/xcuserdata/theosmith.xcuserdatad/xcschemes/: xcschememanagement.plist
QM/Assets.xcassets/AccentColor.colorset/: Contents.json
QMTests/: QMTests.swift
QMUITests/: QMUITests.swift  QMUITestsLaunchTests.swift
backend/: Dockerfile  docker-compose.yml  pyproject.toml  railway.toml
backend/app/: auth.py  config.py  database.py  main.py  mcp_server.py
backend/app/models/: db.py  schemas.py
backend/app/routers/: ask.py  health.py  inventory.py  models.py  oauth.py
backend/app/services/: inventory.py  llm.py  oauth.py  rag.py
backend/chroma_db/: chroma.sqlite3
knowlegde_store/: export_chunks.py  first_aid_chunks.json  pdf_parsing.ipynb  reformat_chunks.py
knowlegde_store/chroma_db/: chroma.sqlite3
