[project]
name = "qm-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "groq>=0.11",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "chromadb>=0.5",
    "voyageai>=0.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "mcp[cli]>=1.28",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",   # for TestClient
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
